--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "framer-motion": "^12.23.0",
     "lucide-react": "^0.525.0",
     "next": "^14.2.30",
+    "node-fetch": "^3.3.2",
     "openai": "^5.8.2",
     "postcss": "^8.5.6",
     "react": "^18.3.1",
